# sourceguard

./: .banned  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  noxfile.py  setup.cfg
.github/actions/: action.yml  pre-commit.yml
.github/workflows/: pre-commit.yml
sourceguard/: banrule.py  engine.py  git.py  main.py
tests/: test_main.py
