[metadata]
name = sourceguard
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whosayn/sourceguard
author = Hussein Faara
author_email = faarahussein@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = invoke>=1.7
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    sourceguard = sourceguard.main:main
